--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,7 +11,8 @@
     <dimen name="backdrop_subtitle">18dp</dimen>
     <dimen name="card_margin">5dp</dimen>
     <dimen name="card_album_radius">0dp</dimen>
-    <dimen name="album_cover_height">160dp</dimen>
+    <dimen name="thumbnailHeight">120dp</dimen>
+    <dimen name="thumbnailWidth">120dp</dimen>
     <dimen name="album_title_padding">10dp</dimen>
     <dimen name="album_title">17dp</dimen>
     <dimen name="songs_count_padding_bottom">5dp</dimen>
@@ -21,4 +22,6 @@
     <dimen name="ic_album_overflow_margin_top">10dp</dimen>
     <dimen name="favourite_height">30dp</dimen>
     <dimen name="favourite_width">30dp</dimen>
+    <dimen name="profileHeading">35dp</dimen>
+    <dimen name="profileEditText">25dp</dimen>
 </resources>
